--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ build/Release
 node_modules/
 jspm_packages/
 
-!node_modules/@afipsdk/afip.js
+!node_modules/@afipsdk/afip.js/
 
 # TypeScript v1 declaration files
 typings/
